--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41"> Calais ne saurait être considéré comme un hotspot.
 </div>
 </div>
 	
@@ -312,7 +312,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #009688 "> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent;border:3px solid #009688 "> Calais ne saurait être considéré comme un hotspot.
 </div>
 </div>
 	
@@ -331,7 +331,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> Calais ne saurait être considéré comme un hotspot.
 </div>
 </div>
 	</div>
