--- a/index.html
+++ b/index.html
@@ -252,7 +252,9 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px #e48400 solid; margin-left:15px; "/>
 
-	<div class="element2"> <p class="triangle-right  left2" width="100" style="font-style: italic;">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
+	<div class="element2"> <p class="triangle-right  left2" width="100" style="font-style: italic;">200 000 étrangers légaux entrent chaque année en France depuis 10 ans, et à peu près autant pour les
+
+illégaux.
 
 </p> </div>
 
@@ -269,7 +271,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #d1e231 solid; margin-left:15px; "/>
 
-	<div class="element2"> <p class="triangle-right left" style="font-style: italic;">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
+	<div class="element2"> <p class="triangle-right left" style="font-style: italic;">L'immense majorité des migrants en France sont des hommes et des femmes qui fuient la pauvreté et non la guerre.
 
 </p> </div>
 
@@ -287,7 +289,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="cope.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
 
-  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
+  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">Chaque année, 200 000 titres de séjours sont délivrés en France.
 
 </p> </div>
 
@@ -305,7 +307,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="cope.jpg" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
 
-  <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
+  <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">En France, on a actuellement 250000 entrée et 200000 départ, soit un solde migratoire positif de 500000.
 
 </p> </div>
 
@@ -324,7 +326,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="cope.jpg" alt="" style="border:2px #0f52ba solid; margin-left:15px;  "/>
 
-  <div class="element2"> <p class="triangle-right left4" style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
+  <div class="element2"> <p class="triangle-right left4" style="font-style: italic;">L’immigration est un exil forcé.
 
 </p> </div>
 
