--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ illégaux.
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="cope.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
 
   <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">Chaque année, 200 000 titres de séjours sont délivrés en France.
 
@@ -305,7 +305,7 @@ illégaux.
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="cope.jpg" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
 
   <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">En France, on a actuellement 250000 entrée et 200000 départ, soit un solde migratoire positif de 500000.
 
@@ -324,7 +324,7 @@ illégaux.
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="cope.jpg" alt="" style="border:2px #0f52ba solid; margin-left:15px;  "/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #0f52ba solid; margin-left:15px;  "/>
 
   <div class="element2"> <p class="triangle-right left4" style="font-style: italic;">L’immigration est un exil forcé.
 
