--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 						<li><a style="color:white" href="#one">De quoi parle-t-on ?</a></li>
 						<li><a style="color:white" href="#two">En Europe</a></li>
 						<li><a style="color:white" href="#france">En France</a></li>
+						<li><a style="color:white" href="#pol">Immigration et politique</a></li>
 						<li><a style="color:white" href="#quizz">Quizz</a></li>
 						<li><a style="color:white" href="#init">Initiatives</a></li>
-						<li><a style="color:white" href="#init2">Les ENSAE</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -206,12 +206,16 @@
 <div class="container">
 <div class="infogram-embed" data-id="88c3dfb3-409c-4a2c-8356-f43c5472e55a" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
 			</div>
-
-	<!-- Quatrième partie -->	
+		</section>
 		
- 	<h2> Qu'en disent les candidats à la présidentielle? </h2>
+	<!-- Quatrième partie Quentin-->	
+		<section id="pol" class="wrapper style12 align-center">
+		<div style="font-size: 100px;">
+		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
+		</div>
+ 			<h1 style="color:#004953"> Qu'en disent les candidats à la présidentielle? </h1>
+ 	<h2> Focus sur le premier débat entre les principaux candidats </h2>
 		
-	<!-- Partie Quentin -->
 
  <div class="compteur" id="compteur" style="position: fixed;margin-left: auto;
     margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:45px; background:rgba(0,0,0,0.5); padding-top:0.4%; padding-bottom:0.5%; padding-left:0%;z-index: 4;">
