--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a style="color:white" href="#one">De quoi parle-t-on ?</a></li>
-						<li><a style="color:white" href="#two">En Europe</a></li>
-						<li><a style="color:white" href="#france">En France</a></li>
-						<li><a style="color:white" href="#pol">Immigration et politique</a></li>
-						<li><a style="color:white" href="#quizz">Quizz</a></li>
-						<li><a style="color:white" href="#init">Initiatives</a></li>
+						<li><a style="color:white" href="#one"> <font size="+1">De quoi parle-t-on ? </font ></a></li>
+						<li><a style="color:white" href="#two"><font size="+1">En Europe</font ></a></li>
+						<li><a style="color:white" href="#france"><font size="+1">En France</font ></a></li>
+						<li><a style="color:white" href="#pol"><font size="+1">Immigration et politique</font ></a></li>
+						<li><a style="color:white" href="#quizz"><font size="+1">Quizz</font ></a></li>
+						<li><a style="color:white" href="#init"><font size="+1">Initiatives</font ></a></li>
 					</ul>
 				</nav>
 			</header>
