--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<br>
 		Le <b> statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. 
 </div>
-	<div id="alienor"></div>
+	<div id="alienor" style="align-self:center;"></div>
 
 </div>
 	
