--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...</h2>	
 		<div class="container"  style="display:flex;justify-content:space-between;" >
-					<div id="container"></div>
+					<div id="container" style="align-self:center;"></div>
 				<div style="color:#004953;">  <br>
 					<ul>
 						<li><b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]]
