--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
 		<br>
 		Le <b> statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. 
 </div>
-	<div id="alienor" style="align-self:center;"></div>
-Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015
-</div>
+	<div id="alienor" style="align-self:center;"></div> <br>
+<div style="color:#24292E,align-self:center"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015
+	</div>
+	</div>
 	
 		</section> 
 
