--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
-	<div style="color:#004953,text-justify: inter-word;"> <br>
+	<div style="color:#004953;  width: 50%;text-justify: inter-word;"> <br>
 		Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
 		<br>
 		Le bénéfice de la <b> protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave (peine de mort, torture, traitement inhumain, conflit armé, etc.). <br>
@@ -126,7 +126,7 @@
 	<div id="alienor">
 
 </div>
-	<div style="align-self:center;"> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
+	<div> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
 	</div>
 			</div>
 		</section> 
