--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 			
 		<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...</h2>	
-		<div class="container">
+		<div class="container" style="display:flex;justify-content:space-between;">
 					<div id="container" ></div>
 				<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
 					<ul>
-						<li><b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]]
+						<li><b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
 						</li><br>
-<li> <b>“Migrant”</b>  : toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas un statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
+<li> Est considéré comme <b>“Migrant”</b>, toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas un statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
 						</li><br>
 <li><b>Demandeur d’asile</b> : Un réfugié est un ancien demandeur d’asile mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
 						</li><br>
