--- a/index.html
+++ b/index.html
@@ -424,16 +424,16 @@ $(document).ready(function(){
        "children": [{
          "name": "Utopia56",
          "address": "http://www.utopia56.com/fr/user/register",
-         "note": "aider 2h, 1 jour ou d’avantage dans un Centre d’Accueil et d’Orientation à Paris ou près de Calais"
+         "note": "Aider 2h, 1 jour ou d’avantage dans un Centre d’Accueil et d’Orientation à Paris ou près de Calais"
        }, {
          "name": "Singa Calm",
          "address": "http://calm.singa.fr/", 
-          "note": "une chambre d’un particulier pour héberger un réfugié pendant 3 à 12 mois "
+          "note": "Une chambre d’un particulier pour héberger un réfugié pendant 3 à 12 mois "
        }, {
          "name": "JRS",
          "address": "http://www.jrsfrance.org/welcome-en-france-refugie/",
-         "note": "Aller là où personne ne va : héberger un demandeur d’asile pendant 4 à 6 semaines."
-       }]
+         "note": "Jesuit Refugee Service, Aller là où personne ne va : héberger un demandeur d’asile pendant 4 à 6 semaines."
+       }
      }, {
        "name": "Emploi",
        "description": "Impliquer les entreprises et employés dans l'intégration des réfugiés",
@@ -886,12 +886,7 @@ $(document).ready(function(){
 
 			<li><a href ="https://www.ideas-box.org/index.php/fr/"><b>Ideas Box de Bibliothèques sans Frontières </b> </a> est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs..et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
 Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 pour inviter à voter pour le projet d’Ideas Box de Bibliothèque Sans Frontières, au Google Impact Challenge. Il a également fait son stage d’ouverture chez BSF. 
-			</li><br>
-			<li><big><b>“Combien de migrants?” </b> </big>: Marie Labussière et Anna Leccia (ENSAE 2016) ont rédigé leur mémoire d’Histoire de la Statistique (cours de 3A avec L. Davezies et E. Didier) sur la terminologie employée pour décrire les flux migratoires (vocabulaire différencié selon la position dans les champs médiatique, politique, institutionnel ou associatif des acteurs), la production des chiffres et l’usage qui en est fait par les médias et les organisations internationales ainsi qu’une remise en contexte pour comprendre pourquoi le phénomène migratoire et la “crise des migrants” ont été problématisé ainsi. 
-			</li><br>
-	<li>Si vous êtes intéressés par le sujet, n’hésitez pas à suivre le cours de <a href="http://www.ensae.fr/ensae/fr/formations-navhorizontale-172/statisticien-conomiste-navhorizontale-48/3me-anne-voies-de-spcialisation-formationsdiplome-96/data-science-cours-3a.html?id=103071"><b>“Sociologie des migrations internationales”</b></a>avec S. Toma en 3A. 
-			</li><br>
-
+		
 
 			<li><a href="https://www.amazonasimages.com/"><b>Sebastiao Salgado </b></a> (inscrit à l’ENSAE en 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li>
 				
