--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ $(document).ready(function(){
          "note":"Des témoignages à 360° de trois enfants réfugiés de Syrie, du Soudan du Sud et d'Ukraine "
        },  {
          "name": "Jeu intéractif Arte",
-         "address": "https://with.in/watch/clouds-over-sidra/", 
+         "address": "http://refugees.arte.tv/fr", 
 	   "note ": "Dans la peau d'un envoyé spécial pour raconter les camps de refugiés au Népal, en Irak et au Liban. "
        }]
      },
