--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
 			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
   		<h1 style="color:#004953" class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
+
+			<div class="message-info">
+    			<strong>Titre</strong> Texte
+			</div>
 			
 		<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...</h2>	
