--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
-			<h2> Quelques dates clé de la politique européenne en Mer Méditerranée </h2>
+			<h2> Quelques dates clé de la politique migratoire européenne </h2>
 <div class="container">
 <iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="450" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
@@ -176,7 +176,7 @@
 </div>			
 </section>
 		<!-- Carte Adeline -->
-<section id="two" class="wrapper style12 align-center">
+<section id="two" class="wrapper style13 align-center">
 			<div class="container">
 				<header>
 					<h2>Demandes d'asiles et taux d'acceptation (2015)</h2>
@@ -191,8 +191,10 @@
 
 <!-- <div class="infogram-embed" data-id="7df11091-58b7-4766-b15f-0b1b8c9b3a4f" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
 -->
-<section id="two" class="wrapper style12 align-center">
+<section id="two" class="wrapper style13 align-center">
 <div class="container" >
+	<div> <font color="#24292E"> Historique des demandes d'asile en France </font> </div>
+
 <div id="asile" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 	</div>
 </section>
@@ -204,7 +206,7 @@
 		<div style="font-size: 100px;">
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
- 			<h1 style="color:#004953"> Les migrants en France: qui sont-ils? </h1>
+ 			<h1 style="color:#004953"> Les demandeurs d'asile en France: qui sont-ils? </h1>
 <!-- Origine -->
 			<h2> D'où viennent-ils? </h2>
 <div class="container" style="display:flex;justify-content:space-between;">		
@@ -371,6 +373,8 @@ $(document).ready(function(){
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
 		<h1 style="color:#004953"> Quizz </h1>
+		<h2 style="color:#004953"> Testez vos connaissances ! </h2>
+
 		<div class="container">
 		 <div id="frame" role="content"></div> 
 		</div>
@@ -907,17 +911,17 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<h3>Nos sources </h3>
 							<p>D'où viennent les chiffres présentés ? Difficulté de collecte des données, croisement de plusieurs sources. Les migrants sont évidemment durs à tracer... etc</p>
 							<ul class="alt">
-								<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-								<li><a href="#">Quod adipisci perferendis et itaque.</a></li>
-								<li><a href="#">Itaque eveniet ullam, veritatis reiciendis?</a></li>
+								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Statistiques de l'asile: Eurostat</a></li>
+								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">Demandes d'asile en France: OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Vidéo Datagueule</a></li>
 								<li><a href="#">Accusantium repellat accusamus a, soluta.</a></li>
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
 							<h3>Pourquoi ce projet ? </h3>
 							<p> Nous sommes quatre étudiants en dernière année à l'ENSAE ParisTech et à la Paris School of Economics.</p>
-							<p> Ce projet a été réalisé pour notre cours de Visualisation de données à l'ENSAE.</p>
-							<p> Nous souhaitons mettre au profit nos compétences d'économistes statisticiens pour nous engager et mettre en lumière une situation complexe et cruciale de notre époque.</p>
+							<p> Ce projet a été réalisé pour notre cours de visualisation de données à l'ENSAE.</p>
+							<p> Nous souhaitons utiliser nos compétences d'économistes statisticiens pour nous engager et mettre en lumière une situation complexe et cruciale de notre époque.</p>
 							
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
