--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 									<p>Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? </p>								
 									<p> Vous avez une remarque ou voulez en savoir plus sur notre projet ? 
 									N'hésitez pas à nous écrire :</p>								
-									<a href="#">lumieresurlesmigrations@gmail.com</a>
+									<a href="mailto:lumieresurlesmigrations@gmail.com">lumieresurlesmigrations@gmail.com</a>
 															
 							</ul>
 						</section>
