--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
 			</div>
   		<h1 style="color:#004953" class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
 
+			<div id="cc-m-8081689085" class="j-module n j-htmlCode ">
 			<div class="message-info">
     			<strong>Titre</strong> Texte
 			</div>
-			
+			</div>
 		<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
