--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		
 		<!-- Camembert Aliénor -->
 		<section id="three" class="wrapper style13 align-center">
-			<h2> Le statut de réfugié, et quoi d'autre ? </h2>
+			<h2> Il n'y a pas que des réfugiés </h2>
 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
@@ -169,7 +169,7 @@
 
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
-			<h2> Quelques dates clé de la politique migratoire européenne </h2>
+			<h2> Quelques dates clé </h2>
 <div class="container">
 <iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="450" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
@@ -910,12 +910,12 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 					<div class="row">
 						<section class="4u 6u(medium) 12u$(small)">
 							<h3>Nos sources </h3>
-							<p>D'où viennent les chiffres présentés ? Difficulté de collecte des données, croisement de plusieurs sources. Les migrants sont évidemment durs à tracer... etc</p>
+							<p>D'où viennent les chiffres présentés ? Difficulté de collecte des données, croisement de plusieurs sources. Les migrants sont évidemment durs à tracer... etc. Voici nos principales sources:</p>
 							<ul class="alt">
-								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Statistiques de l'asile: Eurostat</a></li>
-								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">Demandes d'asile en France: OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Vidéo Datagueule</a></li>
-								<li><a href="#">Accusantium repellat accusamus a, soluta.</a></li>
+								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
+								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a></li>
+							Nous avons également utilisé les photos de Sebastiao Salgado pour illustrer notre propos.
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
